<resources>
    <string name="app_name">Rappi</string>
    //Titles to the MainActivity
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="up_coming_movies">Up Coming Movies</string>
    //Titles to buttons of searching
    <string name="search_online">Online</string>
    <string name="search_offline">Offline</string>
    <string name="search">Search</string>
    <string name="search_popular">Popular</string>
    <string name="search_top_rated">Top Rated</string>
    <string name="search_up_coming">Up Coming</string>
    //Hint into EditText
    <string name="set_name">Set Name</string>
</resources>
