<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="ui.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:layout_marginVertical="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_offline"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                android:indeterminateTint="@color/colorGreen"
                android:scaleY="4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/textToSearchOffline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorGray"
                            android:hint="@string/set_name"
                            android:inputType="textPersonName"
                            android:padding="15dp"
                            android:layout_margin="10dp"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlack"
                            android:textColorLink="@color/colorBlack"
                            android:textSize="20dp" />
                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <Button
                            android:id="@+id/TopRated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rated_layout_in"
                            android:onClick="doSearch"
                            android:padding="15dp"
                            android:text="@string/search_top_rated" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <Button
                            android:id="@+id/Popular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rated_layout_in"
                            android:onClick="doSearch"
                            android:padding="15dp"
                            android:text="@string/search_popular" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <Button
                            android:id="@+id/Upcoming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rated_layout_in"
                            android:onClick="doSearch"
                            android:padding="15dp"
                            android:text="@string/search_up_coming" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSearchOffline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/rated_layout_in"
                    android:drawableStart="@drawable/return_button"
                    android:onClick="doMain"
                    android:paddingStart="24dp" />

                <Button
                    android:id="@+id/avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/rated_layout_in"
                    android:drawableStart="@drawable/user_f"
                    android:paddingStart="22dp" />

                <Button
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/rated_layout_in"
                    android:drawableStart="@drawable/settings"
                    android:paddingStart="20dp" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>